EKS/Ingress/4. Service-customer.yml
---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: packersmovers
