EKS/Ingress/6. Service-driver.yml
---
apiVersion: v1
kind: Service
metadata:
  name: driver-service # ingress name should be match
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: packersmovers
