EKS/Ingress/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
  labels:
    app: packersmovers
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1          # Maximum number of Pods that can be unavailable during the update
      maxSurge: 1                # Maximum number of Pods that can be created above the desired replica count
  revisionHistoryLimit: 10
  replicas: 4
  selector:
    matchLabels:
      app: packersmovers
  template:
    metadata:
      labels:
        app: packersmovers
    spec:
      containers:
      - name: customer
        image: XXXXXXXXXXXXXXXXXXXXXXXX841162679093.dkr.ecr.us-east-1.amazonaws.com/customer:6
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /customer/ping          # Endpoint to check for readiness (adjust according to your app)
            #path: /  # for frontend >> checkc get methods
            port: 8080
          initialDelaySeconds: 20    # Wait 20 seconds before the first probe
          periodSeconds: 5         # Probe every 5 seconds
          timeoutSeconds: 2         # Timeout if the probe takes longer than 2 seconds
          failureThreshold: 3       # Mark the Pod as not ready after 3 consecutive failures

---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: packersmovers
